removed the html

--- a/inst/README.html
+++ b/inst/README.html
@@ -502,6 +502,7 @@ desc</code></pre>
 #&gt; Maintainer: Who to complain to &lt;yourfault@somewhere.net&gt;
 #&gt; Description: More about what it does (maybe more than one line)
 #&gt; License: What license is it under?</code></pre>
+<p>If you run <code>get_authors()</code> without conversion, then an error will result.</p>
 </div>
 </div>
 <div id="the-procedural-api" class="section level2">
